other-vpol/prevent-bare-pods/.chainsaw-test/pod-sibling.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: prevent-naked-pods-ns
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
