other-vpol/prevent-bare-pods/prevent-bare-pods.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: prevent-bare-pods
  annotations:
    policies.kyverno.io/title: Prevent Bare Pods in ValidatingPolicy
    policies.kyverno.io/category: Other, EKS Best Practices in vpol 
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Pods not created by workload controllers such as Deployments
      have no self-healing or scaling abilities and are unsuitable for production.
      This policy prevents such "bare" Pods from being created unless they originate
      from a higher-level workload controller of some sort.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: true
  autogen:
   podControllers:
     controllers: []
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    - expression: "'ownerReferences' in object.metadata"
      message: "Bare Pods are not allowed. They must be created by Pod controllers."
