other-vpol/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: prevent-naked-pods
spec:
  # disable templating because it can cause issues with ValidatingPolicy
  template: false
  steps:
  - name: shared-exception-namespace
    skipDelete: true
    try:
    - apply:
        file: policy-exceptions-namespace.yaml
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: ../prevent-bare-pods.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: prevent-bare-pods
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep: 
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: pod-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-bad.yaml
    - apply:
        file: deployment.yaml
  - name: step-04
    try:
    - apply:
        file: exception.yaml
    - apply:
        file: pod-exception.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Bare Pods are not allowed. They must be created by Pod controllers.')): true
        file: pod-sibling.yaml
    - delete:
        file: pod-exception.yaml
    - delete:
        file: exception.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Bare Pods are not allowed. They must be created by Pod controllers.')): true
        file: pod-exception.yaml
  - name: step-03
    try:
    - sleep:
        duration: 5s
    - script:
        content: |
          if [ $(kubectl get pods -n prevent-naked-pods-ns | grep gooddeployment01 | wc -l) -gt 0 ]; then exit 0; else exit 1; fi
  - name: step-99
    try:
    - script:
        content: kubectl delete all --all --force --grace-period=0 -n prevent-naked-pods-ns
